--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 include:
   - board: nice_nano_v2
-    shield: sofle_pandakb_left
+    shield: sofle_pandakb_left.overlay
   - board: nice_nano_v2
-    shield: sofle_pandakb_right
+    shield: sofle_pandakb_right.overlay
