--- a/config/boards/shields/sofle_pandakb/sofle_pandakb_right.zmk.yml
+++ b/config/boards/shields/sofle_pandakb/sofle_pandakb_right.zmk.yml
@@ -2,3 +2,15 @@
 compatible: "zmk,shield"
 label: "sofle_pandakb_right"
 description: "PandaKB Sofle right half"
+
+
+file_format: "1"
+id: sofle_pandakb_right
+name: Sofle PandaKB Right
+type: shield
+url: https://github.com/martyr9/zmk-sofle-pandakb
+requires: [pro_micro]
+features:
+  - keys
+siblings:
+  - sofle_pandakb_left
