--- a/config/boards/shields/sofle_pandakb/sofle_left_only.dtsi
+++ b/config/boards/shields/sofle_pandakb/sofle_left_only.dtsi
@@ -8,16 +8,16 @@
                 &kp ESC &kp 1  &kp 2  &kp 3  &kp 4  &kp 5      
 
                 // Row 1 — 13 touches
-                &kp NO  &kp Q  &kp W  &kp E  &kp R  &kp T      
+                &none &kp Q  &kp W  &kp E  &kp R  &kp T      
 
                 // Row 2 — 13 touches
-                &kp NO  &kp A  &kp S  &kp D  &kp F  &kp G      
+                &none  &kp A  &kp S  &kp D  &kp F  &kp G      
 
                 // Row 3 — 13 touches
                 &kp LSFT  &kp Z  &kp X  &kp C  &kp V  &kp B    
 
                 // Row 4 — 12 touches
-                &kp NO  &kp NO  &kp NO  &kp Space &kp Enter    
+                &none  &none  &none  &kp SPACE &kp ENTER    
             >;
         };
     };
