--- a/config/boards/shields/sofle_pandakb/sofle_left_only.dtsi
+++ b/config/boards/shields/sofle_pandakb/sofle_left_only.dtsi
@@ -1,24 +1,40 @@
+/dts-v1/;
+
 / {
-    keymap {
-        compatible = "zmk,keymap";
+    compatible = "zmk,shield";
+    label = "sofle_left_only";
+};
 
-        default_layer {
-            bindings = <
-                // Row 0 — 13 touches
-                &kp ESC &kp 1  &kp 2  &kp 3  &kp 4  &kp 5      
+&kscan0 {
+    compatible = "zmk,kscan-gpio-matrix";
+    diode-direction = "col2row";
 
-                // Row 1 — 13 touches
-                &none &kp Q  &kp W  &kp E  &kp R  &kp T      
+    row-gpios =
+        <&gpio0 19 GPIO_ACTIVE_HIGH>,
+        <&gpio0 8  GPIO_ACTIVE_HIGH>,
+        <&gpio0 12 GPIO_ACTIVE_HIGH>,
+        <&gpio0 11 GPIO_ACTIVE_HIGH>,
+        <&gpio1 9  GPIO_ACTIVE_HIGH>;
 
-                // Row 2 — 13 touches
-                &none  &kp A  &kp S  &kp D  &kp F  &kp G      
+    col-gpios =
+        <&gpio0 3 GPIO_ACTIVE_HIGH>,
+        <&gpio0 28 GPIO_ACTIVE_HIGH>,
+        <&gpio0 29 GPIO_ACTIVE_HIGH>,
+        <&gpio0 30 GPIO_ACTIVE_HIGH>,
+        <&gpio0 31 GPIO_ACTIVE_HIGH>,
+        <&gpio1 0 GPIO_ACTIVE_HIGH>;
+};
 
-                // Row 3 — 13 touches
-                &kp LSFT  &kp Z  &kp X  &kp C  &kp V  &kp B    
+keymap_transform_left_only: keymap_transform_0 {
+    compatible = "zmk,matrix-transform";
+    rows = <5>;
+    columns = <6>;
 
-                // Row 4 — 12 touches
-                &none  &none  &none  &kp SPACE &kp ENTER    
-            >;
-        };
-    };
+    map = <
+        RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
+        RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
+        RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
+        RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)
+        RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
+    >;
 };
