--- a/config/sofle_pandakb.conf
+++ b/config/sofle_pandakb.conf
@@ -1,11 +1,27 @@
 # Configuration Bluetooth
-CONFIG_BT_DEVICE_NAME_MAX=30
-CONFIG_ZMK_KEYBOARD_NAME="Sofle PandaKB"
+# CONFIG_BT_DEVICE_NAME_MAX=30
+# CONFIG_ZMK_KEYBOARD_NAME="Sofle PandaKB"
 
 # Activer Bluetooth
-CONFIG_BT=y
-CONFIG_ZMK_BLE=y
+# CONFIG_BT=y
+# CONFIG_ZMK_BLE=y
 
 # Configuration du split keyboard
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
+# CONFIG_ZMK_SPLIT=y
+# CONFIG_ZMK_SPLIT_BLE=y
+
+############################################################
+# modifications pour split keyboard gauche seulement
+############################################################
+# Désactiver Bluetooth
+CONFIG_BT=n
+CONFIG_BT_MAX_CONN=0
+
+# Désactiver le mode split
+CONFIG_ZMK_SPLIT=n
+
+# Activer le USB
+CONFIG_ZMK_USB=y
+
+# Debug optionnel
+CONFIG_ZMK_USB_LOGGING=y
