--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,6 @@
 include: 
 - board: nice_nano_v2 
-shield: sofle_left_only
+shield: sofle_left
 #  - board: nice_nano_v2
 #    shield: sofle_pandakb_left
 #  - board: nice_nano_v2
